src/objects/CampaignToProgramTranspose__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>ChannelType__c</fullName>
        <label>Channel Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GL_Description__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>GL Description</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ProgramFocus__c</fullName>
        <label>Program Focus</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProgrammingType__c</fullName>
        <description>Programming Type</description>
        <label>Programming Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>CampaignToProgramTranspose</label>
</CustomObject>